Alignment of buttons fix ed

--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,14 @@
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.5em 1em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   /* background-color: #1a1a1a; */
   cursor: pointer;
   transition: border-color 0.25s;
+  margin: 2px;
 }
 button:hover {
   border-color: #646cff;
@@ -29,4 +30,12 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.buttons{
+  margin: 5px;
+}
+
+.message{
+  text-align: center;
 }
